# homelab

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  base.env  docker-compose.dev.yml  docker-compose.llm.yml  docker-compose.ops.yml  docker-compose.yml  down.sh  noproxy.env  proxy.env  refresh.sh  up.sh
00-base-stack/: docker-compose.yml  mailserver.env
00-base-stack/nginx/: nginx.conf
10-met-stack/: docker-compose.yml
20-main-stack/: docker-compose.yml
21-git-stack/: README.md  docker-compose.yml
21-git-stack/doc/: 1-mermaid.md  Kroki_Sample.md
21-git-stack/gitlab/: omnibus_config.rb
30-dev-stack/: docker-compose.yml
31-ops-stack/: docker-compose.yml
32-prj-stack/: README.md  docker-compose.yml
32-prj-stack/knowledge/: custom_connection.xml
33-mon-stack/: README.md  docker-compose.yml
40-gai-stac/: docker-compose.ops.yml  docker-compose.yml
40-gai-stack/: sample.env
40-gai-stack/langchain/: README.md  pyproject.toml
40-gai-stack/langchain/src/langchain_motex/: __init__.py  pyproject.toml
40-gai-stack/langchain/src/langchain_motex/chain_publishers/: base_publisher.py  ollama_publisher.py
40-gai-stack/langchain/src/langchain_motex/document_loaders/: __init__.py  docling_loader.py  markitdown_loader.py  motex_dir_loader.py  motex_excel_loader.py  motex_file_loader.py  motex_misc_loader.py  motex_pdf_loader.py  motex_powerpoint_loader.py  motex_word_loader.py
40-gai-stack/langchain/src/langserve/: Dockerfile
40-gai-stack/langchain/tests/: test_motex_pdf_loader.py
40-gai-stack/langchain/tests/langchain_motex/document_loaders/: test_motex_dir_loader.py  test_motex_pdf_loader.py  test_motex_word_loader.py
base-stack/: compose.yaml  docker-compose.override.yml
dev-stack/: .env  README.md  compose.yaml  docker-compose.yml
etc-dnsmasq.d/: 01-pihole.conf
etc-pihole/: gravity.db_temp-journal  list.1.raw.githubusercontent.com.domains  list.1.raw.githubusercontent.com.domains.sha1  pihole-FTL.conf  pihole-FTL.db  setupVars.conf.update.bak  versions
llm-stack/: .env  README.md  api.env  compose.yaml  compose.yml  docker-compose.yml
stack/llm/: README.md
(+103 files in other folders)
