[project]
name = "langchain-motex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "34744243+k5-mot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
